--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "kuenzelit/nice-routes",
     "description": "Nice routes for Laravel 5.",
     "require": {
-        "laravel/framework": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*"
+        "laravel/framework": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*"
     },
     "license": "MIT",
     "authors": [
